# decentrasync

./: .gitignore  Cargo.toml  README.md
assets/: index.html
public/: index.html
src/: adapters.rs  app.rs  data.rs  domain.rs  entities.rs  lib.rs  main.rs  ports.rs  repositories.rs  values.rs
src/adapters/: clock.rs  file_event_store.rs  http.rs  http_api.rs  http_api_axum.rs  http_api_rouille.rs  memory_event_log.rs  memory_event_store.rs  memory_read_model.rs  memory_repository.rs  mod.rs
src/domain/: aggregates.rs  commands.rs  data.rs  errors.rs  events.rs
