[package]
name = "dumb_channel_decentralized_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.6.1"
serde = {version = "1.0", features = ["derive"]}
uuid = {version = "1.2.2", features = ["v4"]}
mock_instant = { version = "0.2", features = ["sync"] }
