[package]
name = "decentrasync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.6.1"
serde = {version = "1.0", features = ["derive"]}
uuid = {version = "1.2.2", features = ["v4"]}
mock_instant = { version = "0.2", features = ["sync"] }
clap = { version = "4.0.32", features = ["derive"] }
assert_fs = "1.0.10"
predicates = "2.1.5"
rust-embed = "6.4.2"
time = { version = "0.3.17", features = ["macros"] }
serde_json = "1.0.91"
axum = "0.6.4"
tokio = { version = "1.24.2", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
